--- a/practice/index_pagination_ver.html
+++ b/practice/index_pagination_ver.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover"
     />
     <title>To do list - pagination</title>
-    <link rel="stylesheet" href="../../utils/reset.css" />
+    <link rel="stylesheet" href="../utils/reset.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"
@@ -34,6 +34,6 @@
       <div class="todos"></div>
       <div class="pagination"></div>
     </div>
-    <script src="script.js"></script>
+    <script src="script_pagination_ver.js"></script>
   </body>
 </html>
