220221 22:29 todolist & pagination 구현완료

--- a/pagination/index.html
+++ b/pagination/index.html
@@ -34,6 +34,6 @@
       <div class="todos"></div>
       <div class="pagination"></div>
     </div>
-    <script src="script_pagination_ver.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
